// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeviceSettings /> - snapshot renders DeviceSettings, with initializeValueFromStore 1`] = `
<View
  colorScheme="light"
  colors={
    Object {
      "ShadeOne": "#eeeeee",
      "ShadeThree": "#8e8e93",
      "ShadeTwo": "#b5b5b5",
      "activeTintOne": "#e26901",
      "background": "#fff",
      "border": "#C9C9CE",
      "card": "#fff",
      "inActiveTintOne": "#e26901",
      "primary": "#1b365d",
      "screenBackground": "#eeeeee",
      "text": "#A59F9A",
      "textFive": "#555555",
      "textFour": "#4C4C4C",
      "textThree": "#000",
      "textTwo": "#777777",
    }
  }
  dark={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "marginHorizontal": 20.83275,
        "marginTop": 10.416375,
        "width": 708.3345,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#777777",
        "fontSize": 33,
        "marginBottom": 5,
        "marginTop": 10.416375,
      }
    }
  >
    Device settings
  </Text>
  <View
    accessibilityLabel="House code, 12 , "
    accessible={true}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    importantForAccessibility="yes"
    level={2}
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "elevation": 2,
          "marginTop": 10.416375,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 2,
          "marginBottom": 10.416375,
          "marginTop": 0,
        },
      ]
    }
  >
    <View
      colorScheme="light"
      colors={
        Object {
          "ShadeOne": "#eeeeee",
          "ShadeThree": "#8e8e93",
          "ShadeTwo": "#b5b5b5",
          "activeTintOne": "#e26901",
          "background": "#fff",
          "border": "#C9C9CE",
          "card": "#fff",
          "inActiveTintOne": "#e26901",
          "primary": "#1b365d",
          "screenBackground": "#eeeeee",
          "text": "#A59F9A",
          "textFive": "#555555",
          "textFour": "#4C4C4C",
          "textThree": "#000",
          "textTwo": "#777777",
        }
      }
      dark={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "overflow": "hidden",
            "padding": 30,
          },
          Object {
            "padding": 20.83275,
          },
        ]
      }
    >
      <View
        colorScheme="light"
        colors={
          Object {
            "ShadeOne": "#eeeeee",
            "ShadeThree": "#8e8e93",
            "ShadeTwo": "#b5b5b5",
            "activeTintOne": "#e26901",
            "background": "#fff",
            "border": "#C9C9CE",
            "card": "#fff",
            "inActiveTintOne": "#e26901",
            "primary": "#1b365d",
            "screenBackground": "#eeeeee",
            "text": "#A59F9A",
            "textFive": "#555555",
            "textFour": "#4C4C4C",
            "textThree": "#000",
            "textTwo": "#777777",
          }
        }
        dark={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          allowFontScaling={false}
          colorScheme="light"
          colors={
            Object {
              "ShadeOne": "#eeeeee",
              "ShadeThree": "#8e8e93",
              "ShadeTwo": "#b5b5b5",
              "activeTintOne": "#e26901",
              "background": "#fff",
              "border": "#C9C9CE",
              "card": "#fff",
              "inActiveTintOne": "#e26901",
              "primary": "#1b365d",
              "screenBackground": "#eeeeee",
              "text": "#A59F9A",
              "textFive": "#555555",
              "textFour": "#4C4C4C",
              "textThree": "#000",
              "textTwo": "#777777",
            }
          }
          dark={false}
          level={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000",
                "fontSize": 30,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          House code
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 2,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            color="#999"
            colorScheme="light"
            colors={
              Object {
                "ShadeOne": "#eeeeee",
                "ShadeThree": "#8e8e93",
                "ShadeTwo": "#b5b5b5",
                "activeTintOne": "#e26901",
                "background": "#fff",
                "border": "#C9C9CE",
                "card": "#fff",
                "inActiveTintOne": "#e26901",
                "primary": "#1b365d",
                "screenBackground": "#eeeeee",
                "text": "#A59F9A",
                "textFive": "#555555",
                "textFour": "#4C4C4C",
                "textThree": "#000",
                "textTwo": "#777777",
              }
            }
            dark={false}
            importantForAccessibility="yes"
            size={30}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#e26901",
                "fontFamily": "telldusicons",
                "fontSize": 30,
              }
            }
          >
            help
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "opacity": 1,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          colorScheme="light"
          colors={
            Object {
              "ShadeOne": "#eeeeee",
              "ShadeThree": "#8e8e93",
              "ShadeTwo": "#b5b5b5",
              "activeTintOne": "#e26901",
              "background": "#fff",
              "border": "#C9C9CE",
              "card": "#fff",
              "inActiveTintOne": "#e26901",
              "primary": "#1b365d",
              "screenBackground": "#eeeeee",
              "text": "#A59F9A",
              "textFive": "#555555",
              "textFour": "#4C4C4C",
              "textThree": "#000",
              "textTwo": "#777777",
            }
          }
          dark={false}
          level={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000",
                "flex": 1,
                "fontSize": 30,
                "textAlign": "right",
                "textAlignVertical": "center",
              },
              Object {
                "flex": 0,
              },
            ]
          }
        >
          12
           
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 3,
              "opacity": 1,
              "padding": 2,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#e26901",
                  "fontSize": 30,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Unit code, 4 , "
    accessible={true}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    importantForAccessibility="yes"
    level={2}
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "elevation": 2,
          "marginTop": 10.416375,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 2,
          "marginBottom": 10.416375,
          "marginTop": 0,
        },
      ]
    }
  >
    <View
      colorScheme="light"
      colors={
        Object {
          "ShadeOne": "#eeeeee",
          "ShadeThree": "#8e8e93",
          "ShadeTwo": "#b5b5b5",
          "activeTintOne": "#e26901",
          "background": "#fff",
          "border": "#C9C9CE",
          "card": "#fff",
          "inActiveTintOne": "#e26901",
          "primary": "#1b365d",
          "screenBackground": "#eeeeee",
          "text": "#A59F9A",
          "textFive": "#555555",
          "textFour": "#4C4C4C",
          "textThree": "#000",
          "textTwo": "#777777",
        }
      }
      dark={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "overflow": "hidden",
            "padding": 30,
          },
          Object {
            "padding": 20.83275,
          },
        ]
      }
    >
      <View
        colorScheme="light"
        colors={
          Object {
            "ShadeOne": "#eeeeee",
            "ShadeThree": "#8e8e93",
            "ShadeTwo": "#b5b5b5",
            "activeTintOne": "#e26901",
            "background": "#fff",
            "border": "#C9C9CE",
            "card": "#fff",
            "inActiveTintOne": "#e26901",
            "primary": "#1b365d",
            "screenBackground": "#eeeeee",
            "text": "#A59F9A",
            "textFive": "#555555",
            "textFour": "#4C4C4C",
            "textThree": "#000",
            "textTwo": "#777777",
          }
        }
        dark={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          allowFontScaling={false}
          colorScheme="light"
          colors={
            Object {
              "ShadeOne": "#eeeeee",
              "ShadeThree": "#8e8e93",
              "ShadeTwo": "#b5b5b5",
              "activeTintOne": "#e26901",
              "background": "#fff",
              "border": "#C9C9CE",
              "card": "#fff",
              "inActiveTintOne": "#e26901",
              "primary": "#1b365d",
              "screenBackground": "#eeeeee",
              "text": "#A59F9A",
              "textFive": "#555555",
              "textFour": "#4C4C4C",
              "textThree": "#000",
              "textTwo": "#777777",
            }
          }
          dark={false}
          level={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000",
                "fontSize": 30,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          Unit code
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 2,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            color="#999"
            colorScheme="light"
            colors={
              Object {
                "ShadeOne": "#eeeeee",
                "ShadeThree": "#8e8e93",
                "ShadeTwo": "#b5b5b5",
                "activeTintOne": "#e26901",
                "background": "#fff",
                "border": "#C9C9CE",
                "card": "#fff",
                "inActiveTintOne": "#e26901",
                "primary": "#1b365d",
                "screenBackground": "#eeeeee",
                "text": "#A59F9A",
                "textFive": "#555555",
                "textFour": "#4C4C4C",
                "textThree": "#000",
                "textTwo": "#777777",
              }
            }
            dark={false}
            importantForAccessibility="yes"
            size={30}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#e26901",
                "fontFamily": "telldusicons",
                "fontSize": 30,
              }
            }
          >
            help
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "opacity": 1,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          colorScheme="light"
          colors={
            Object {
              "ShadeOne": "#eeeeee",
              "ShadeThree": "#8e8e93",
              "ShadeTwo": "#b5b5b5",
              "activeTintOne": "#e26901",
              "background": "#fff",
              "border": "#C9C9CE",
              "card": "#fff",
              "inActiveTintOne": "#e26901",
              "primary": "#1b365d",
              "screenBackground": "#eeeeee",
              "text": "#A59F9A",
              "textFive": "#555555",
              "textFour": "#4C4C4C",
              "textThree": "#000",
              "textTwo": "#777777",
            }
          }
          dark={false}
          level={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000",
                "flex": 1,
                "fontSize": 30,
                "textAlign": "right",
                "textAlignVertical": "center",
              },
              Object {
                "flex": 0,
              },
            ]
          }
        >
          4
           
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 3,
              "opacity": 1,
              "padding": 2,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#e26901",
                  "fontSize": 30,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<DeviceSettings /> - snapshot renders DeviceSettings, without initializeValueFromStore 1`] = `
<View
  colorScheme="light"
  colors={
    Object {
      "ShadeOne": "#eeeeee",
      "ShadeThree": "#8e8e93",
      "ShadeTwo": "#b5b5b5",
      "activeTintOne": "#e26901",
      "background": "#fff",
      "border": "#C9C9CE",
      "card": "#fff",
      "inActiveTintOne": "#e26901",
      "primary": "#1b365d",
      "screenBackground": "#eeeeee",
      "text": "#A59F9A",
      "textFive": "#555555",
      "textFour": "#4C4C4C",
      "textThree": "#000",
      "textTwo": "#777777",
    }
  }
  dark={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "marginHorizontal": 20.83275,
        "marginTop": 10.416375,
        "width": 708.3345,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#777777",
        "fontSize": 33,
        "marginBottom": 5,
        "marginTop": 10.416375,
      }
    }
  >
    Device settings
  </Text>
  <View
    accessibilityLabel="House code, 13 , "
    accessible={true}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    importantForAccessibility="yes"
    level={2}
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "elevation": 2,
          "marginTop": 10.416375,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 2,
          "marginBottom": 10.416375,
          "marginTop": 0,
        },
      ]
    }
  >
    <View
      colorScheme="light"
      colors={
        Object {
          "ShadeOne": "#eeeeee",
          "ShadeThree": "#8e8e93",
          "ShadeTwo": "#b5b5b5",
          "activeTintOne": "#e26901",
          "background": "#fff",
          "border": "#C9C9CE",
          "card": "#fff",
          "inActiveTintOne": "#e26901",
          "primary": "#1b365d",
          "screenBackground": "#eeeeee",
          "text": "#A59F9A",
          "textFive": "#555555",
          "textFour": "#4C4C4C",
          "textThree": "#000",
          "textTwo": "#777777",
        }
      }
      dark={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "overflow": "hidden",
            "padding": 30,
          },
          Object {
            "padding": 20.83275,
          },
        ]
      }
    >
      <View
        colorScheme="light"
        colors={
          Object {
            "ShadeOne": "#eeeeee",
            "ShadeThree": "#8e8e93",
            "ShadeTwo": "#b5b5b5",
            "activeTintOne": "#e26901",
            "background": "#fff",
            "border": "#C9C9CE",
            "card": "#fff",
            "inActiveTintOne": "#e26901",
            "primary": "#1b365d",
            "screenBackground": "#eeeeee",
            "text": "#A59F9A",
            "textFive": "#555555",
            "textFour": "#4C4C4C",
            "textThree": "#000",
            "textTwo": "#777777",
          }
        }
        dark={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          allowFontScaling={false}
          colorScheme="light"
          colors={
            Object {
              "ShadeOne": "#eeeeee",
              "ShadeThree": "#8e8e93",
              "ShadeTwo": "#b5b5b5",
              "activeTintOne": "#e26901",
              "background": "#fff",
              "border": "#C9C9CE",
              "card": "#fff",
              "inActiveTintOne": "#e26901",
              "primary": "#1b365d",
              "screenBackground": "#eeeeee",
              "text": "#A59F9A",
              "textFive": "#555555",
              "textFour": "#4C4C4C",
              "textThree": "#000",
              "textTwo": "#777777",
            }
          }
          dark={false}
          level={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000",
                "fontSize": 30,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          House code
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 2,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            color="#999"
            colorScheme="light"
            colors={
              Object {
                "ShadeOne": "#eeeeee",
                "ShadeThree": "#8e8e93",
                "ShadeTwo": "#b5b5b5",
                "activeTintOne": "#e26901",
                "background": "#fff",
                "border": "#C9C9CE",
                "card": "#fff",
                "inActiveTintOne": "#e26901",
                "primary": "#1b365d",
                "screenBackground": "#eeeeee",
                "text": "#A59F9A",
                "textFive": "#555555",
                "textFour": "#4C4C4C",
                "textThree": "#000",
                "textTwo": "#777777",
              }
            }
            dark={false}
            importantForAccessibility="yes"
            size={30}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#e26901",
                "fontFamily": "telldusicons",
                "fontSize": 30,
              }
            }
          >
            help
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "opacity": 1,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          colorScheme="light"
          colors={
            Object {
              "ShadeOne": "#eeeeee",
              "ShadeThree": "#8e8e93",
              "ShadeTwo": "#b5b5b5",
              "activeTintOne": "#e26901",
              "background": "#fff",
              "border": "#C9C9CE",
              "card": "#fff",
              "inActiveTintOne": "#e26901",
              "primary": "#1b365d",
              "screenBackground": "#eeeeee",
              "text": "#A59F9A",
              "textFive": "#555555",
              "textFour": "#4C4C4C",
              "textThree": "#000",
              "textTwo": "#777777",
            }
          }
          dark={false}
          level={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000",
                "flex": 1,
                "fontSize": 30,
                "textAlign": "right",
                "textAlignVertical": "center",
              },
              Object {
                "flex": 0,
              },
            ]
          }
        >
          13
           
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 3,
              "opacity": 1,
              "padding": 2,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#e26901",
                  "fontSize": 30,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityLabel="Unit code, 5 , "
    accessible={true}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    importantForAccessibility="yes"
    level={2}
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 2,
          "elevation": 2,
          "marginTop": 10.416375,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2,
        },
        Object {
          "borderRadius": 2,
          "marginBottom": 10.416375,
          "marginTop": 0,
        },
      ]
    }
  >
    <View
      colorScheme="light"
      colors={
        Object {
          "ShadeOne": "#eeeeee",
          "ShadeThree": "#8e8e93",
          "ShadeTwo": "#b5b5b5",
          "activeTintOne": "#e26901",
          "background": "#fff",
          "border": "#C9C9CE",
          "card": "#fff",
          "inActiveTintOne": "#e26901",
          "primary": "#1b365d",
          "screenBackground": "#eeeeee",
          "text": "#A59F9A",
          "textFive": "#555555",
          "textFour": "#4C4C4C",
          "textThree": "#000",
          "textTwo": "#777777",
        }
      }
      dark={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "overflow": "hidden",
            "padding": 30,
          },
          Object {
            "padding": 20.83275,
          },
        ]
      }
    >
      <View
        colorScheme="light"
        colors={
          Object {
            "ShadeOne": "#eeeeee",
            "ShadeThree": "#8e8e93",
            "ShadeTwo": "#b5b5b5",
            "activeTintOne": "#e26901",
            "background": "#fff",
            "border": "#C9C9CE",
            "card": "#fff",
            "inActiveTintOne": "#e26901",
            "primary": "#1b365d",
            "screenBackground": "#eeeeee",
            "text": "#A59F9A",
            "textFive": "#555555",
            "textFour": "#4C4C4C",
            "textThree": "#000",
            "textTwo": "#777777",
          }
        }
        dark={false}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          allowFontScaling={false}
          colorScheme="light"
          colors={
            Object {
              "ShadeOne": "#eeeeee",
              "ShadeThree": "#8e8e93",
              "ShadeTwo": "#b5b5b5",
              "activeTintOne": "#e26901",
              "background": "#fff",
              "border": "#C9C9CE",
              "card": "#fff",
              "inActiveTintOne": "#e26901",
              "primary": "#1b365d",
              "screenBackground": "#eeeeee",
              "text": "#A59F9A",
              "textFive": "#555555",
              "textFour": "#4C4C4C",
              "textThree": "#000",
              "textTwo": "#777777",
            }
          }
          dark={false}
          level={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000",
                "fontSize": 30,
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          Unit code
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "padding": 2,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            color="#999"
            colorScheme="light"
            colors={
              Object {
                "ShadeOne": "#eeeeee",
                "ShadeThree": "#8e8e93",
                "ShadeTwo": "#b5b5b5",
                "activeTintOne": "#e26901",
                "background": "#fff",
                "border": "#C9C9CE",
                "card": "#fff",
                "inActiveTintOne": "#e26901",
                "primary": "#1b365d",
                "screenBackground": "#eeeeee",
                "text": "#A59F9A",
                "textFive": "#555555",
                "textFour": "#4C4C4C",
                "textThree": "#000",
                "textTwo": "#777777",
              }
            }
            dark={false}
            importantForAccessibility="yes"
            size={30}
            style={
              Object {
                "backgroundColor": "transparent",
                "color": "#e26901",
                "fontFamily": "telldusicons",
                "fontSize": 30,
              }
            }
          >
            help
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "opacity": 1,
            "paddingVertical": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          colorScheme="light"
          colors={
            Object {
              "ShadeOne": "#eeeeee",
              "ShadeThree": "#8e8e93",
              "ShadeTwo": "#b5b5b5",
              "activeTintOne": "#e26901",
              "background": "#fff",
              "border": "#C9C9CE",
              "card": "#fff",
              "inActiveTintOne": "#e26901",
              "primary": "#1b365d",
              "screenBackground": "#eeeeee",
              "text": "#A59F9A",
              "textFive": "#555555",
              "textFour": "#4C4C4C",
              "textThree": "#000",
              "textTwo": "#777777",
            }
          }
          dark={false}
          level={3}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#000",
                "flex": 1,
                "fontSize": 30,
                "textAlign": "right",
                "textAlignVertical": "center",
              },
              Object {
                "flex": 0,
              },
            ]
          }
        >
          5
           
        </Text>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "marginLeft": 3,
              "opacity": 1,
              "padding": 2,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": "#e26901",
                  "fontSize": 30,
                },
                undefined,
                Object {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
